name:               pastebin
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: config/routes

executable          pastebin
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Handler.Home

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
