name:               pastebin
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: config/routes

executable          pastebin
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Handler.Home
                    Handler.Create
                    Handler.View
                    Handler.Edit

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core
                , yesod-persistent
                , persistent
                , persistent-sqlite
                , persistent-template
                , text
                , monad-logger

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
